feat: adds functionality to mock in app

--- a/examples/with-apollo/package.json
+++ b/examples/with-apollo/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"next dev\" \"yarn generate --watch\"",
+    "dev:mock": "NEXT_PUBLIC_MOCK_OPERATIONS=enabled next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,19 +17,20 @@
     "@apollo/client": "^3.7.1",
     "graphql": "^16.6.0",
     "next": "13.0.5",
-    "nextjs-apollo-client": "^0.2.2",
+    "next-merge-props": "^1.0.1",
+    "nextjs-apollo-client": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@apollo-mock-operations/codegen-plugin": "*",
+    "@apollo-mock-operations/core": "*",
+    "@apollo-mock-operations/storybook-addon": "*",
     "@graphql-codegen/add": "3.2.1",
     "@graphql-codegen/cli": "2.15.0",
     "@graphql-codegen/introspection": "2.2.1",
     "@graphql-codegen/typescript": "2.8.3",
     "@graphql-codegen/typescript-operations": "2.5.8",
-    "@apollo-mock-operations/codegen-plugin": "*",
-    "@apollo-mock-operations/core": "*",
-    "@apollo-mock-operations/storybook-addon": "*",
     "@storybook/addon-actions": "^6.4.18",
     "@storybook/addon-essentials": "^6.4.18",
     "@storybook/addon-links": "^6.4.18",
