--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,8 +14,8 @@
     "access": "public"
   },
   "scripts": {
-    "build:cjs": "swc src --copy-files -d dist/cjs --config-file ../../.swcrc -C module.type=commonjs",
-    "build:esm": "swc src --copy-files -d dist/esm --config-file ../../.swcrc -C module.type=es6",
+    "build:cjs": "swc src -d dist/cjs --config-file ../../.swcrc -C module.type=commonjs",
+    "build:esm": "swc src -d dist/esm --config-file ../../.swcrc -C module.type=es6",
     "build:ts": "tsc",
     "build": "yarn clean && concurrently \"yarn build:cjs\" \"yarn build:esm\" \"yarn build:ts\"",
     "clean": "rimraf dist",
