refactor: typing updates and improvements for operations

--- a/packages/codegen-plugin/tsconfig.type.json
+++ b/packages/codegen-plugin/tsconfig.type.json
@@ -1,8 +1,16 @@
 {
   "extends": "../../tsconfig.options.json",
   "compilerOptions": {
-    "noEmit": true
+    "declarationDir": "dist/dts",
+    "outDir": "dist/dts",
+    "rootDir": "src",
+    "emitDeclarationOnly": true
   },
-  "exclude": ["dist", "node_modules"],
-  "include": ["src/**/*"]
+  "exclude": [
+    "dist/dts",
+    "tests"
+  ],
+  "include": [
+    "src/**/*"
+  ],
 }
