--- a/packages/storybook-addon/package.json
+++ b/packages/storybook-addon/package.json
@@ -16,11 +16,11 @@
   "scripts": {
     "build:cjs": "swc src -d dist/cjs --config-file ../../.swcrc -C module.type=commonjs",
     "build:esm": "swc src -d dist/esm --config-file ../../.swcrc -C module.type=es6",
-    "build:ts": "tsc",
+    "build:ts": "tsc --project tsconfig.type.json",
     "build": "yarn clean && concurrently \"yarn build:cjs\" \"yarn build:esm\" \"yarn build:ts\"",
     "clean": "rimraf dist",
     "clean:deps": "rimraf node_modules",
-    "check:types": "tsc --project tsconfig.type.json"
+    "check:types": "tsc"
   },
   "devDependencies": {
     "@apollo/client": "^3.7.2",
