--- a/packages/storybook-addon/tsconfig.json
+++ b/packages/storybook-addon/tsconfig.json
@@ -1,19 +1,13 @@
 {
+  "extends": "../../tsconfig.options.json",
   "compilerOptions": {
-    "declarationDir": "dist/dts",
-    "outDir": "dist/dts",
-    "rootDir": "src",
-    "emitDeclarationOnly": true
+    "noEmit": true
   },
   "exclude": [
-    "dist/dts",
-    "tests"
+    "dist",
+    "node_modules"
   ],
-  "extends": "../../tsconfig.options.json",
   "include": [
-    "src/**/*",
-    "types/**/*",
-    "../../types/**/*"
-  ],
-  "references": []
+    "src/**/*"
+  ]
 }
