--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
       "path": "packages/core"
     },
     {
-      "path": "packages/graphql-codegen-plugin"
+      "path": "packages/codegen-plugin"
     },
     {
       "path": "packages/storybook-addon"
