--- a/examples/common/package.json
+++ b/examples/common/package.json
@@ -15,7 +15,7 @@
     "build:cjs": "swc src -d dist/cjs --config-file ../../.swcrc -C module.type=commonjs",
     "build:esm": "swc src -d dist/esm --config-file ../../.swcrc -C module.type=es6",
     "build:ts": "tsc",
-    "build": "yarn clean && concurrently \"yarn build:cjs\" \"yarn build:esm\" \"yarn build:ts\"",
+    "build:common": "yarn clean && concurrently \"yarn build:cjs\" \"yarn build:esm\" \"yarn build:ts\"",
     "clean": "rimraf dist",
     "clean:deps": "rimraf node_modules",
     "check:types": "tsc --project tsconfig.type.json",
