--- a/packages/codegen-plugin/package.json
+++ b/packages/codegen-plugin/package.json
@@ -31,6 +31,6 @@
     "@graphql-codegen/visitor-plugin-common": "^2.7.1"
   },
   "peerDependencies": {
-    "graphql": "^16.*"
+    "graphql": "16.*"
   }
 }
