--- a/examples/with-apollo-cra/package.json
+++ b/examples/with-apollo-cra/package.json
@@ -40,6 +40,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "eslint-config-react-app": "^7.0.1",
     "prop-types": "^15.8.1",
     "storybook-addon-react-router-v6": "^0.2.1",
     "typescript": "^4.9.3",
