--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "release": "yarn prerelease && changeset publish && git push --follow-tags"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.0",
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.3.21",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
