chore: updates example graphql-codegen deps

--- a/examples/with-apollo-cra/package.json
+++ b/examples/with-apollo-cra/package.json
@@ -17,11 +17,11 @@
     "@apollo-mock-operations/codegen-plugin": "*",
     "@apollo-mock-operations/core": "*",
     "@apollo-mock-operations/storybook-addon": "*",
-    "@graphql-codegen/add": "3.2.1",
-    "@graphql-codegen/cli": "2.15.0",
-    "@graphql-codegen/introspection": "2.2.1",
-    "@graphql-codegen/typescript": "2.8.3",
-    "@graphql-codegen/typescript-operations": "2.5.8",
+    "@graphql-codegen/add": "3.2.3",
+    "@graphql-codegen/cli": "2.16.4",
+    "@graphql-codegen/introspection": "2.2.3",
+    "@graphql-codegen/typescript": "2.8.7",
+    "@graphql-codegen/typescript-operations": "2.5.12",
     "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
     "@storybook/addon-interactions": "^6.5.15",
@@ -52,7 +52,7 @@
     "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "DISABLE_ESLINT_PLUGIN=true react-scripts test",
     "eject": "react-scripts eject",
-    "generate": "graphql-codegen",
+    "generate": "graphql-codegen --config codegen.ts",
     "storybook": "DISABLE_ESLINT_PLUGIN=true start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
