--- a/examples/with-apollo-nextjs/package.json
+++ b/examples/with-apollo-nextjs/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "generate": "graphql-codegen --config codegen.yml",
+    "generate": "graphql-codegen --config codegen.ts",
     "storybook": "DISABLE_ESLINT_PLUGIN=true start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
@@ -27,11 +27,11 @@
     "@apollo-mock-operations/codegen-plugin": "*",
     "@apollo-mock-operations/core": "*",
     "@apollo-mock-operations/storybook-addon": "*",
-    "@graphql-codegen/add": "3.2.1",
-    "@graphql-codegen/cli": "2.15.0",
-    "@graphql-codegen/introspection": "2.2.1",
-    "@graphql-codegen/typescript": "2.8.3",
-    "@graphql-codegen/typescript-operations": "2.5.8",
+    "@graphql-codegen/add": "3.2.3",
+    "@graphql-codegen/cli": "2.16.4",
+    "@graphql-codegen/introspection": "2.2.3",
+    "@graphql-codegen/typescript": "2.8.7",
+    "@graphql-codegen/typescript-operations": "2.5.12",
     "@storybook/addon-actions": "^6.4.18",
     "@storybook/addon-essentials": "^6.4.18",
     "@storybook/addon-links": "^6.4.18",
