--- a/.swcrc
+++ b/.swcrc
@@ -1,5 +1,10 @@
 {
   "jsc": {
+    "experimental": {
+      "plugins": [
+        ["swc-plugin-auto-css-modules", {}]
+      ]
+    },
     "parser": {
       "syntax": "typescript",
       "tsx": true
@@ -9,7 +14,7 @@
         "runtime": "automatic"
       }
     },
-    "target": "es2020"
+    "target": "es2016"
   },
   "sourceMaps": true,
   "inlineSourcesContent": false
