--- a/packages/core/.swcrc
+++ b/packages/core/.swcrc
@@ -1,5 +1,13 @@
 {
   "jsc": {
+    "experimental": {
+      "plugins": [
+        ["@swc/plugin-styled-components", {
+          "displayName": true,
+          "ssr": true
+        }]
+      ]
+    },
     "parser": {
       "syntax": "typescript",
       "tsx": true
