--- a/packages/core/tsconfig.type.json
+++ b/packages/core/tsconfig.type.json
@@ -5,8 +5,7 @@
     "outDir": "dist/dts",
     "rootDir": "src",
     "emitDeclarationOnly": true,
-    "esModuleInterop": true,
-    "plugins": [{ "name": "typescript-plugin-css-modules" }]
+    "esModuleInterop": true
   },
   "exclude": [
     "dist/dts",
