chore: removed unneed tsconfig in core

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "../../tsconfig.options.json",
   "compilerOptions": {
-    "noEmit": true,
-    "esModuleInterop": true
+    "noEmit": true
   },
   "files": [
     "test/introspection.json"
