--- a/examples/common/package.json
+++ b/examples/common/package.json
@@ -10,8 +10,8 @@
     "common.css"
   ],
   "scripts": {
-    "build:cjs": "swc src -d dist/cjs --config-file ../../.swcrc -C module.type=commonjs",
-    "build:esm": "swc src -d dist/esm --config-file ../../.swcrc -C module.type=es6",
+    "build:cjs": "swc src -d dist/cjs --config-file .swcrc -C module.type=commonjs",
+    "build:esm": "swc src -d dist/esm --config-file .swcrc -C module.type=es6",
     "build:ts": "tsc",
     "build": "yarn clean && concurrently \"yarn build:cjs\" \"yarn build:esm\" \"yarn build:ts\"",
     "clean": "rimraf dist",
@@ -21,12 +21,14 @@
   },
   "devDependencies": {
     "@apollo-mock-operations/codegen-plugin": "*",
+    "@apollo/client": "^3.7.1",
     "@graphql-codegen/add": "3.2.1",
     "@graphql-codegen/cli": "2.15.0",
     "@graphql-codegen/introspection": "2.2.1",
     "@graphql-codegen/typescript": "2.8.3",
     "@graphql-codegen/typescript-operations": "2.5.8",
-    "@apollo/client": "^3.7.1",
+    "@swc/cli": "^0.1.60",
+    "@swc/core": "^1.3.32",
     "graphql": "^16.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,12 +36,12 @@
   },
   "peerDependencies": {
     "@apollo-mock-operations/codegen-plugin": "*",
+    "@apollo/client": "^3.7.1",
     "@graphql-codegen/add": "3.2.1",
     "@graphql-codegen/cli": "2.15.0",
     "@graphql-codegen/introspection": "2.2.1",
     "@graphql-codegen/typescript": "2.8.3",
     "@graphql-codegen/typescript-operations": "2.5.8",
-    "@apollo/client": "^3.7.1",
     "graphql": "^16.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
