--- a/examples/server/package.json
+++ b/examples/server/package.json
@@ -6,18 +6,20 @@
   "author": "Frank Cooke",
   "license": "MIT",
   "scripts": {
-    "build": "swc src -d build --config-file ../../.swcrc -C module.type=commonjs",
+    "build": "swc src -d build --config-file .swcrc -C module.type=commonjs",
     "dev": "tsnd --respawn src/app.ts",
     "start": "node build/app.js",
     "generate": "graphql-codegen --config codegen.ts"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.16.4",
+    "@graphql-codegen/typescript": "2.8.7",
+    "@graphql-codegen/typescript-resolvers": "2.7.12",
+    "@swc/cli": "^0.1.60",
+    "@swc/core": "^1.3.32",
     "@types/node": "^18.11.10",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.3",
-    "@graphql-codegen/typescript": "2.8.7",
-    "@graphql-codegen/typescript-resolvers": "2.7.12"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
     "@apollo/server": "^4.2.2",
