--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clean:deps": "turbo run clean:deps --parallel",
     "clean:all": "turbo run clean:all --parallel",
     "build": "turbo run build",
+    "build:packages": "turbo run build --filter=@apollo-mock-operations/*",
     "dev": "turbo run dev --scope='@examples/*'",
     "storybook": "turbo run storybook --scope='@examples/with-apollo'",
     "start:all": "turbo run start storybook --parallel",
@@ -51,12 +52,9 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
-    "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.3.21",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
     "eslint": "^8.29.0",
-    "eslint-config-custom": "*",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.1.6",
