--- a/packages/codegen-plugin/package.json
+++ b/packages/codegen-plugin/package.json
@@ -30,8 +30,8 @@
     "access": "public"
   },
   "scripts": {
-    "build:cjs": "swc src -d dist/cjs --config-file ../../.swcrc -C module.type=commonjs",
-    "build:esm": "swc src -d dist/esm --config-file ../../.swcrc -C module.type=es6",
+    "build:cjs": "swc src -d dist/cjs --config-file .swcrc -C module.type=commonjs",
+    "build:esm": "swc src -d dist/esm --config-file .swcrc -C module.type=es6",
     "build:ts": "tsc --project tsconfig.type.json",
     "build": "yarn clean && concurrently \"yarn build:cjs\" \"yarn build:esm\" \"yarn build:ts\"",
     "clean": "rimraf dist",
