--- a/packages/storybook-addon/package.json
+++ b/packages/storybook-addon/package.json
@@ -31,8 +31,8 @@
     "access": "public"
   },
   "scripts": {
-    "build:cjs": "swc src -d dist/cjs --config-file ../../.swcrc -C module.type=commonjs",
-    "build:esm": "swc src -d dist/esm --config-file ../../.swcrc -C module.type=es6",
+    "build:cjs": "swc src -d dist/cjs --config-file .swcrc -C module.type=commonjs",
+    "build:esm": "swc src -d dist/esm --config-file .swcrc -C module.type=es6",
     "build:ts": "tsc --project tsconfig.type.json",
     "build": "yarn clean && concurrently \"yarn build:cjs\" \"yarn build:esm\" \"yarn build:ts\"",
     "clean": "rimraf dist",
@@ -42,6 +42,8 @@
   "devDependencies": {
     "@apollo/client": "^3.7.2",
     "@storybook/react": "^6.5.14",
+    "@swc/cli": "^0.1.60",
+    "@swc/core": "^1.3.32",
     "@types/react": "^18.0.26",
     "concurrently": "^7.0.0",
     "graphql": "^16.6.0",
