--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           install-command: yarn --frozen-lockfile
 
       - name: Lint
-        run: yarn lint
+        run: yarn lint:ci
 
 #      - name: Test
 #        run: yarn test --ci --coverage --maxWorkers=2
