--- a/examples/with-apollo-nextjs/package.json
+++ b/examples/with-apollo-nextjs/package.json
@@ -32,6 +32,7 @@
     "@graphql-codegen/introspection": "2.2.3",
     "@graphql-codegen/typescript": "2.8.7",
     "@graphql-codegen/typescript-operations": "2.5.12",
+    "@next/eslint-plugin-next": "^13.1.6",
     "@storybook/addon-actions": "^6.4.18",
     "@storybook/addon-essentials": "^6.4.18",
     "@storybook/addon-links": "^6.4.18",
