--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,4 @@ jobs:
 #        run: yarn test --ci --coverage --maxWorkers=2
 
       - name: Build
-        run: yarn build
+        run: yarn build:packages
