chore: simplify example dir naming

--- a/examples/with-nextjs/package.json
+++ b/examples/with-nextjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@examples/with-apollo-nextjs",
+  "name": "@examples/with-nextjs",
   "private": true,
   "version": "0.1.0",
   "scripts": {
