--- a/examples/server/package.json
+++ b/examples/server/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "swc src -d build --config-file .swcrc -C module.type=commonjs",
-    "dev": "tsnd --respawn src/app.ts",
+    "dev": "yarn tsnd --respawn src/app.ts && yarn generate --watch",
     "start": "node build/app.js",
     "generate": "graphql-codegen --config codegen.ts"
   },
@@ -18,6 +18,7 @@
     "@swc/cli": "^0.1.60",
     "@swc/core": "^1.3.32",
     "@types/node": "^18.11.10",
+    "concurrently": "^7.6.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
