--- a/examples/with-cra/package.json
+++ b/examples/with-cra/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@examples/with-apollo-cra",
+  "name": "@examples/with-cra",
   "private": true,
   "version": "0.1.0",
   "dependencies": {
