--- a/examples/with-nextjs/package.json
+++ b/examples/with-nextjs/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.1.0",
   "scripts": {
-    "dev": "concurrently \"next dev\" \"yarn generate --watch\"",
+    "dev": "concurrently \"next dev\" \"pnpm run generate --watch\"",
     "dev:mocks": "NEXT_PUBLIC_MOCK_OPERATIONS=enabled next dev",
     "build": "next build",
     "start": "next start",
@@ -11,7 +11,8 @@
     "lint:fix": "next lint --fix",
     "generate": "graphql-codegen --config codegen.ts",
     "storybook": "DISABLE_ESLINT_PLUGIN=true start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "clean:deps": "rimraf node_modules"
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
@@ -44,6 +45,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "concurrently": "^7.6.0",
+    "rimraf": "^5.0.1",
     "typescript": "^5.1.6"
   }
 }
