--- a/examples/common/package.json
+++ b/examples/common/package.json
@@ -13,7 +13,7 @@
     "build:cjs": "swc src -d dist/cjs --config-file .swcrc -C module.type=commonjs",
     "build:esm": "swc src -d dist/esm --config-file .swcrc -C module.type=es6",
     "build:ts": "tsc",
-    "build": "yarn clean && concurrently \"yarn build:cjs\" \"yarn build:esm\" \"yarn build:ts\"",
+    "build": "pnpm run clean && concurrently \"pnpm run build:cjs\" \"pnpm run build:esm\" \"pnpm run build:ts\"",
     "clean": "rimraf dist",
     "clean:deps": "rimraf node_modules",
     "lint": "eslint src/**/*.ts",
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@apollo-mock-operations/codegen-plugin": "*",
+    "@apollo-mock-operations/core": "*",
     "@apollo/client": "^3.7.1",
     "@graphql-codegen/add": "3.2.1",
     "@graphql-codegen/cli": "2.15.0",
@@ -29,10 +30,14 @@
     "@graphql-codegen/typescript-operations": "2.5.8",
     "@swc/cli": "^0.1.60",
     "@swc/core": "^1.3.32",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.2.7",
+    "concurrently": "^8.2.0",
     "graphql": "^16.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "tslib": "^2.6.1"
   },
   "peerDependencies": {
     "@apollo-mock-operations/codegen-plugin": "*",
