--- a/examples/server/package.json
+++ b/examples/server/package.json
@@ -7,9 +7,10 @@
   "license": "MIT",
   "scripts": {
     "build": "swc src -d build --config-file .swcrc -C module.type=commonjs",
-    "dev": "yarn tsnd --respawn src/app.ts && yarn generate --watch",
+    "dev": "pnpm run tsnd --respawn src/app.ts && pnpm run generate --watch",
     "start": "node build/app.js",
-    "generate": "graphql-codegen --config codegen.ts"
+    "generate": "graphql-codegen --config codegen.ts",
+    "clean:deps": "rimraf node_modules"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.16.4",
@@ -19,6 +20,7 @@
     "@swc/core": "^1.3.32",
     "@types/node": "^18.11.10",
     "concurrently": "^7.6.0",
+    "rimraf": "^5.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   },
