--- a/examples/with-vite/package.json
+++ b/examples/with-vite/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "generate": "graphql-codegen --config codegen.cjs",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "clean:deps": "rimraf node_modules"
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
@@ -36,9 +37,17 @@
     "@storybook/builder-vite": "^0.3.0",
     "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
+    "rimraf": "^5.0.1",
     "storybook-addon-react-router-v6": "^0.2.1",
     "typescript": "^5.1.6",
     "vite": "^4.0.0"
