--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node": ">=14.0.0"
   },
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "clean": "turbo run clean --parallel",
     "clean:deps": "turbo run clean:deps --parallel",
     "clean:all": "turbo run clean:all --parallel",
@@ -45,29 +46,29 @@
     "lint:ci": "eslint --cache 'packages/*/{src,test}/**.{ts,tsx,js,md}'",
     "lint:fix": "eslint '{packages,examples}/*/{src,test}/**.{ts,tsx,js,md}' --fix",
     "format": "prettier --check \"**/*.{ts,tsx,js,md}\"",
-    "check:types": "yarn turbo run check:types --filter=@apollo-mock-operations/*",
-    "ci": "yarn lint:ci && turbo run check:types build --filter=@apollo-mock-operations/*",
+    "check:types": "pnpm run turbo run check:types --filter=@apollo-mock-operations/*",
+    "ci": "pnpm run lint:ci && turbo run check:types build --filter=@apollo-mock-operations/*",
     "ci:version": "changeset version",
-    "prerelease": "yarn ci",
-    "release": "yarn prerelease && changeset publish && git push --follow-tags"
+    "prerelease": "pnpm run ci",
+    "release": "pnpm run prerelease && changeset publish && git push --follow-tags"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.26.0",
-    "@typescript-eslint/eslint-plugin": "^5.45.1",
-    "@typescript-eslint/parser": "^5.45.1",
-    "eslint": "^8.29.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.1.6",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.11",
+    "@changesets/cli": "^2.26.2",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.1",
     "graphql": "16.6.0",
-    "prettier": "latest",
+    "prettier": "^3.0.1",
     "turbo": "latest"
   },
   "resolutions": {
     "graphql": "16.6.0",
     "react": "18.2.0"
   },
-  "packageManager": "yarn@1.22.17"
+  "packageManager": "pnpm@8.6.9"
 }
