--- a/packages/codegen-plugin/package.json
+++ b/packages/codegen-plugin/package.json
@@ -33,12 +33,15 @@
     "build:cjs": "swc src -d dist/cjs --config-file .swcrc -C module.type=commonjs",
     "build:esm": "swc src -d dist/esm --config-file .swcrc -C module.type=es6",
     "build:ts": "tsc --project tsconfig.type.json",
-    "build": "yarn clean && concurrently \"yarn build:cjs\" \"yarn build:esm\" \"yarn build:ts\"",
+    "build": "pnpm run clean && concurrently \"pnpm run build:cjs\" \"pnpm run build:esm\" \"pnpm run build:ts\"",
     "clean": "rimraf dist",
     "clean:deps": "rimraf node_modules",
     "check:types": "tsc"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.74",
+    "concurrently": "^8.2.0",
     "graphql": "^16.6.0",
     "rimraf": "^3.0.2",
     "typescript": "^5.1.6"
