--- a/packages/storybook-addon/package.json
+++ b/packages/storybook-addon/package.json
@@ -34,7 +34,7 @@
     "build:cjs": "swc src -d dist/cjs --config-file .swcrc -C module.type=commonjs",
     "build:esm": "swc src -d dist/esm --config-file .swcrc -C module.type=es6",
     "build:ts": "tsc --project tsconfig.type.json",
-    "build": "yarn clean && concurrently \"yarn build:cjs\" \"yarn build:esm\" \"yarn build:ts\"",
+    "build": "pnpm run clean && concurrently \"pnpm run build:cjs\" \"pnpm run build:esm\" \"pnpm run build:ts\"",
     "clean": "rimraf dist",
     "clean:deps": "rimraf node_modules",
     "check:types": "tsc"
@@ -45,7 +45,7 @@
     "@swc/cli": "^0.1.60",
     "@swc/core": "^1.3.32",
     "@types/react": "^18.0.26",
-    "concurrently": "^7.0.0",
+    "concurrently": "^8.2.0",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "rimraf": "^3.0.2",
@@ -53,7 +53,9 @@
   },
   "dependencies": {
     "@storybook/addons": "^6.5.14",
-    "@storybook/components": "^6.5.14"
+    "@storybook/api": "^7.2.0",
+    "@storybook/components": "^6.5.14",
+    "@storybook/theming": "^7.2.0"
   },
   "peerDependencies": {
     "@apollo/client": "3.*",
