chore: updates package and example dependencies

--- a/examples/with-vite/tsconfig.json
+++ b/examples/with-vite/tsconfig.json
@@ -16,6 +16,9 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"],
+  "include": [
+    "src",
+    "../../node_modules/.pnpm/vitest@0.34.2_@vitest+ui@0.34.2/node_modules/vitest/globals.d.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
