--- a/examples/common/package.json
+++ b/examples/common/package.json
@@ -22,31 +22,31 @@
   "devDependencies": {
     "@apollo-mock-operations/codegen-plugin": "*",
     "@apollo-mock-operations/core": "*",
-    "@apollo/client": "^3.7.1",
-    "@graphql-codegen/add": "3.2.1",
-    "@graphql-codegen/cli": "2.15.0",
-    "@graphql-codegen/introspection": "2.2.1",
-    "@graphql-codegen/typescript": "2.8.3",
-    "@graphql-codegen/typescript-operations": "2.5.8",
-    "@swc/cli": "^0.1.60",
-    "@swc/core": "^1.3.32",
+    "@apollo/client": "^3.8.1",
+    "@graphql-codegen/add": "5.0.0",
+    "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/introspection": "4.0.0",
+    "@graphql-codegen/typescript": "4.0.1",
+    "@graphql-codegen/typescript-operations": "4.0.1",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.78",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.2.7",
     "concurrently": "^8.2.0",
     "graphql": "^16.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rimraf": "^3.0.2",
-    "tslib": "^2.6.1"
+    "rimraf": "^5.0.1",
+    "tslib": "^2.6.2"
   },
   "peerDependencies": {
     "@apollo-mock-operations/codegen-plugin": "*",
     "@apollo/client": "^3.7.1",
-    "@graphql-codegen/add": "3.2.1",
-    "@graphql-codegen/cli": "2.15.0",
-    "@graphql-codegen/introspection": "2.2.1",
-    "@graphql-codegen/typescript": "2.8.3",
-    "@graphql-codegen/typescript-operations": "2.5.8",
+    "@graphql-codegen/add": "5.x",
+    "@graphql-codegen/cli": "5.x",
+    "@graphql-codegen/introspection": "4.x",
+    "@graphql-codegen/typescript": "5.x",
+    "@graphql-codegen/typescript-operations": "5.x",
     "graphql": "^16.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
