--- a/examples/server/package.json
+++ b/examples/server/package.json
@@ -7,25 +7,25 @@
   "license": "MIT",
   "scripts": {
     "build": "swc src -d build --config-file .swcrc -C module.type=commonjs",
-    "dev": "pnpm run tsnd --respawn src/app.ts && pnpm run generate --watch",
+    "dev": "pnpm tsnd --respawn src/app.ts && pnpm run generate --watch",
     "start": "node build/app.js",
     "generate": "graphql-codegen --config codegen.ts",
     "clean:deps": "rimraf node_modules"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.16.4",
-    "@graphql-codegen/typescript": "2.8.7",
-    "@graphql-codegen/typescript-resolvers": "2.7.12",
-    "@swc/cli": "^0.1.60",
-    "@swc/core": "^1.3.32",
-    "@types/node": "^18.11.10",
-    "concurrently": "^7.6.0",
+    "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/typescript": "4.0.1",
+    "@graphql-codegen/typescript-resolvers": "4.0.1",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.78",
+    "@types/node": "^18.17.5",
+    "concurrently": "^8.2.0",
     "rimraf": "^5.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@apollo/server": "^4.2.2",
+    "@apollo/server": "^4.9.1",
     "graphql": "^16.6.0"
   }
 }
