--- a/examples/with-vite/package.json
+++ b/examples/with-vite/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "dev:mocks": "VITE_MOCK_OPERATION=enabled && vite",
     "build": "tsc && vite build",
+    "test": "vitest --ui",
     "preview": "vite preview",
     "generate": "graphql-codegen --config codegen.cjs",
     "storybook": "start-storybook -p 6006",
@@ -14,42 +15,41 @@
     "clean:deps": "rimraf node_modules"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.1",
+    "@apollo/client": "^3.8.1",
     "@examples/common": "*",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.1"
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@apollo-mock-operations/codegen-plugin": "*",
     "@apollo-mock-operations/core": "*",
     "@apollo-mock-operations/storybook-addon": "*",
-    "@graphql-codegen/add": "3.2.3",
-    "@graphql-codegen/cli": "2.16.4",
-    "@graphql-codegen/introspection": "2.2.3",
-    "@graphql-codegen/typescript": "2.8.7",
-    "@graphql-codegen/typescript-operations": "2.5.12",
+    "@graphql-codegen/add": "5.0.0",
+    "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/introspection": "4.0.0",
+    "@graphql-codegen/typescript": "4.0.1",
+    "@graphql-codegen/typescript-operations": "4.0.1",
     "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
     "@storybook/addon-interactions": "^6.5.15",
     "@storybook/addon-links": "^6.5.15",
     "@storybook/builder-vite": "^0.3.0",
     "@storybook/react": "^6.5.15",
-    "@storybook/testing-library": "^0.0.13",
-    "@testing-library/jest-dom": "^5.17.0",
+    "@storybook/testing-library": "^0.2.0",
+    "@testing-library/jest-dom": "^6.0.1",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@types/testing-library__jest-dom": "^5.14.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "jest": "^29.6.2",
+    "@vitejs/plugin-react": "^4.0.4",
+    "@vitest/ui": "^0.34.2",
     "jest-environment-jsdom": "^29.6.2",
     "rimraf": "^5.0.1",
     "storybook-addon-react-router-v6": "^0.2.1",
     "typescript": "^5.1.6",
-    "vite": "^4.0.0"
+    "vite": "^4.4.9",
+    "vitest": "^0.34.2"
   }
 }
