--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "lint:ci": "eslint --cache 'packages/*/{src,test}/**.{ts,tsx,js,md}'",
     "lint:fix": "eslint '{packages,examples}/*/{src,test}/**.{ts,tsx,js,md}' --fix",
     "format": "prettier --check \"**/*.{ts,tsx,js,md}\"",
-    "check:types": "pnpm run turbo run check:types --filter=@apollo-mock-operations/*",
+    "check:types": "turbo run check:types --filter=@apollo-mock-operations/*",
     "ci": "pnpm run lint:ci && turbo run check:types build --filter=@apollo-mock-operations/*",
     "ci:version": "changeset version",
     "prerelease": "pnpm run ci",
@@ -54,16 +54,16 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-react": "^7.33.2",
     "graphql": "16.6.0",
-    "prettier": "^3.0.1",
+    "prettier": "^3.0.2",
     "turbo": "latest"
   },
   "resolutions": {
