--- a/packages/storybook-addon/package.json
+++ b/packages/storybook-addon/package.json
@@ -40,22 +40,23 @@
     "check:types": "tsc"
   },
   "devDependencies": {
-    "@apollo/client": "^3.7.2",
-    "@storybook/react": "^6.5.14",
-    "@swc/cli": "^0.1.60",
-    "@swc/core": "^1.3.32",
+    "@apollo/client": "^3.8.1",
+    "@storybook/react": "^6.5.16",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.78",
+    "@types/node": "^20.5.0",
     "@types/react": "^18.0.26",
     "concurrently": "^8.2.0",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
-    "rimraf": "^3.0.2",
+    "rimraf": "^5.0.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@storybook/addons": "^6.5.14",
-    "@storybook/api": "^7.2.0",
-    "@storybook/components": "^6.5.14",
-    "@storybook/theming": "^7.2.0"
+    "@storybook/addons": "^6.5.16",
+    "@storybook/api": "^7.3.0",
+    "@storybook/components": "^6.5.16",
+    "@storybook/theming": "^7.3.0"
   },
   "peerDependencies": {
     "@apollo/client": "3.*",
