--- a/packages/codegen-plugin/package.json
+++ b/packages/codegen-plugin/package.json
@@ -48,7 +48,9 @@
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "^5.0.1",
-    "@graphql-codegen/visitor-plugin-common": "^4.0.1"
+    "@graphql-codegen/visitor-plugin-common": "^4.0.1",
+    "cosmiconfig": "^8.2.0",
+    "cosmiconfig-typescript-loader": "^5.0.0"
   },
   "peerDependencies": {
     "graphql": "16.*"
