refactor: restructuring cli templates

--- a/packages/cli/sandbox3/package.json
+++ b/packages/cli/sandbox3/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "generate": "graphql-codegen --config codegen.ts",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "keywords": [],
   "author": "Frank Cooke",
@@ -17,11 +16,7 @@
     "graphql": "16.6.0"
   },
   "devDependencies": {
-    "@apollo-mock-operations/codegen-plugin": "workspace:*",
     "@graphql-codegen/cli": "5.0.0",
-    "@graphql-codegen/client-preset": "^4.1.0",
-    "@graphql-codegen/introspection": "4.0.0",
-    "@graphql-typed-document-node/core": "^3.2.0",
-    "typescript": "^5.1.6"
+    "@graphql-codegen/introspection": "4.0.0"
   }
 }
