--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,11 +8,6 @@
     "apollo",
     "mock",
     "mocking",
-    "storybook",
-    "cypress",
-    "jest",
-    "testing",
-    "next",
     "cli"
   ],
   "repository": {
@@ -20,8 +15,10 @@
     "url": "git+https://github.com/platypusrex/apollo-mock-operations.git"
   },
   "main": "dist/index.js",
+  "types": "dist/dts/index.d.ts",
   "files": [
-    "dist",
+    "dist/**/*",
+    "templates",
     "bin"
   ],
   "bin": {
@@ -31,8 +28,9 @@
     "access": "public"
   },
   "scripts": {
+    "build": "pnpm run clean && concurrently \"pnpm run build:cjs\" \"pnpm run build:ts\"",
     "build:cjs": "swc src -d dist --config-file .swcrc -C module.type=commonjs",
-    "build": "pnpm run clean && pnpm run build:cjs",
+    "build:ts": "tsc --project tsconfig.type.json",
     "clean": "rimraf dist",
     "clean:deps": "rimraf node_modules",
     "check:types": "tsc"
@@ -40,10 +38,10 @@
   "author": "Frank Cooke",
   "license": "MIT",
   "dependencies": {
-    "@inquirer/prompts": "^3.0.3",
+    "@inquirer/prompts": "^3.2.0",
     "chalk": "^4.1.2",
     "commander": "^11.0.0",
-    "cosmiconfig": "^8.2.0",
+    "cosmiconfig": "^8.3.6",
     "cosmiconfig-typescript-loader": "^5.0.0",
     "execa": "^5.1.1",
     "figlet": "^1.6.0",
@@ -53,16 +51,17 @@
     "yaml": "^2.3.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/plugin-helpers": "^5.0.1",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.78",
     "@types/figlet": "^1.5.6",
-    "@types/fs-extra": "^11.0.1",
+    "@types/fs-extra": "^11.0.2",
     "@types/node": "^20.5.1",
     "concurrently": "^8.2.0",
     "rimraf": "^5.0.1",
     "tslib": "^2.6.2",
-    "type-fest": "^4.2.0",
+    "type-fest": "^4.3.3",
     "typescript": "^5.1.6"
   }
 }
